# via-ros

./: .gitignore  README.md  requirements.txt
src/via_bot_mini/: CMakeLists.txt  package.xml  setup.py
src/via_bot_mini/scripts/: http_cam_node.py  stop.py  via_bot_mini_chassis.py
src/via_cam_driver/: CMakeLists.txt  package.xml  setup.py
src/via_cam_driver/scripts/: http_cam_node.py
src/via_launcher/: CMakeLists.txt  package.xml  setup.py
src/via_perception/: CMakeLists.txt  package.xml  setup.py
src/via_perception/scripts/: control.py  lane_detection_node.py  traffic_sign_detection_node.py
src/via_perception/scripts/helpers/: image_processing.py  image_stream.py
src/via_perception/scripts/lane_detection/: lane_detector.py  segmentation_model.py  segmentation_model_tf.py
src/via_perception/scripts/traffic_sign_detection/: traffic_sign_detector.py
src/vision_opencv/cv_bridge/: CMakeLists.txt
src/vision_opencv/cv_bridge/src/: CMakeLists.txt
