<?xml version="1.0"?>
<package format="2">
    <name>via_bot_mini</name>
    <version>0.0.1</version>
    <description>Motors and camera drivers for VIA Bot Mini.</description>

    <license>MIT</license>

    <author  email="vietanh.dev@gmail.com">Viet-Anh Nguyen</author >
    <maintainer email="vietanh.dev@gmail.com">Viet-Anh Nguyen</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>rosapi</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

</package>